# pycommence

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  cmc_api.html  genindex.html  index.html  index.md  index.rst  objects.inv  py-modindex.html  pycommence_api.html  pycommence_wrapper.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js
.doctrees/: cmc_api.doctree  environment.pickle  index.doctree  pycommence_api.doctree  pycommence_wrapper.doctree
.github/workflows/: build_docs.yml  gh-pages.yml  gh-pages_uv.yml
.run/: Sphinx Build.run.xml  Sphinx Task in Sphinx Task in Sphinx Task in Sphinx Task in Sphinx Task in Sphinx Task in Sphinx Task in Sphinx Task in Sphinx Task in Sphinx Task in .run.xml  TEST, BUILD DOCS, CP README.run.xml  pycommence TEST, BUILD DOCS, CP README.run.xml  sphinx and cp.run.xml
_sources/: index.rst.txt  pycommence_api.rst.txt  pycommence_wrapper.rst.txt
doc2/: api.md  index2.md
docs/: .buildinfo  conf.py  genindex.html  index.html  index.md  index.rst  objects.inv  py-modindex.html  pycommence.api.rst  pycommence.wrapper.rst  pycommence_api.html  pycommence_api.rst  pycommence_tests.rst  pycommence_wrapper.html  pycommence_wrapper.rst  requirements.txt  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  pycommence_api.doctree  pycommence_wrapper.doctree
docs/_source/: Makefile  conf.py  index.rst  pycommence_api.rst
docs/source/: cmc_api.rst  conf.py  pycommence_api.rst  pycommence_wrapper.rst  requirements.txt
docs/stuff/: stuff.txt
docs_built/: index.html  py-modindex.html  pycommence_api.html  searchindex.js
docs_built/.doctrees/: environment.pickle  index.doctree  pycommence_api.doctree  pycommence_wrapper.doctree
docs_built/_modules/: index.html  pycommence.html
docs_built/_sources/: pycommence_api.rst.txt
docs_myst/doc_other/: wrapper.md
docs_myst/docs/: conf.py  index.md
docs_source/: README.rst  conf.py  index.rst  pycommence_api.rst  requirements.txt
rsrc/: Commence_Help_DBAPI.chw  commence_dbapi_chm.rst  multi_schema_gen.ps1  shields.md
rsrc/commence schemas/: BaseCursorFilter.json  CommenceCursor.json  FilterFormatters.json
rsrc/schema_gen/: api_schema.json  count_types.ps1  generated_pydantic_api.py  get_data.py  multi_schema_gen.ps1  multi_schema_gen2.ps1  namespaceMap.json  namespace_to_schema.ps1  play.py
src/: main.py
src/cmc/: __init__.py  auto_cmc.py  cmc_funcs.py
src/cmc_gpt/: cmc_conversation.py  cmc_cursor.py  cmc_db.py  cmc_rowset.py
src/commence_py/: __init__.py  auto_cmc.py  cmc_cursor.py  cmc_db.py  cmc_dde.py  cmc_entities.py  cmc_funcs.py  cmc_rowset.py  commence.py  (+2 more)
src/commence_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: cmc_test.py  conftest.py  main.py  sample_data.py  test2.py  test_24.py  test_array.py  test_cmc.py  test_cmc2.py  test_configure_logging.py  test_context_managers.py  test_conv.py  test_get.py  test_old.py  test_pycommence.py  test_tfr.py  test_tutorial.py  test_tutorial_db.py  test_tutorial_handler.py  test_tutorialv2.py  test_view.py
(+96 files in other folders)
