[project]
name = "pycommence"
version = "0.1.1"
description = "wrapper for Commence Rm via pywin32"
authors = [
    { name = "PawRequest", email = "pycommence+pawrequest@users.noreply.github.com" }
]
dependencies = [
    "pywin32",
    "loguru",
    "pydantic",
]
readme = "README.rst"
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    'autodoc_pydantic',
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-readme",
    "sphinx_rtd_dark_mode",
    'pytest',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinx-readme",
    "sphinx_rtd_dark_mode",
    "myst-parser",

]

[tool.hatch.metadata]
allow-direct-references = true
