[project]
name = "pycommence"
version = "0.1.1"
description = "wrapper for Commence Rm via pywin32"
authors = [
    { name = "PawRequest", email = "pycommence+pawrequest@users.noreply.github.com" }
]
dependencies = [
    "pywin32",
    "loguru",
    "pydantic",
]
readme = "README.rst"
requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    'pytest',
]
docs = [
    'autodoc_pydantic',
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-readme",
    "sphinx_rtd_dark_mode",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true

#[tool.pytest.ini_options]
#addopts = "-p no:faulthandler"

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
format.quote-style = "single"